2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: added some notion about the size of the download
	* src/components/ogre/GUIManager.*, src/components/ogre/widgets/EntityPicker.*: fixed the signatures of methods recieving MouseMoved events from Input; MSVC want it to be perfect
	* src/components/ogre/widgets/JesusEdit.cpp: use the correct type of parameter when creating new constructions
	* src/components/ogre/model/Model.cpp: reset all particle systems in dtor, but for now disable complete destructions since it will cause a segfault later on


2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/config/ConfigService.cpp: on win32, use the APPDATA environment variable to get the Application Data path
	* src/components/ogre/ogreopcode/opcode/Makefile.am: include headers in dist
	* src/components/ogre/Makefile.am: removed old unused files

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: added setting for inverting the mouse
	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/environment/Sun.h: cleaned up the SigC headers
	* Makefile.am: include the ember script in the dist

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberPhysicalEntity.cpp, src/components/ogre/model/ModelDefinition.*, src/components/ogre/model/XMLModelDefinitionSerializer.*: added ability to transform a mesh

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.*: changed how the request-for-quit functionality works. If a request for quit signal is emitted and not handled, the application will quit instantly. 

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntity.cpp: cleaned up logging

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.*: added option for inverting the mouse in the y axis, use the ember.conf setting input:invertcamera. Or use the run time console command /set_value input invertcamera true
